--- a/Development Journal/Development Journal/Journal.tex
+++ b/Development Journal/Development Journal/Journal.tex
@@ -79,13 +79,7 @@ During this third week, we came back to the \emph{encryption} and we made two ne
 This week we were given a two weeks assignment. We started in the morning refactoring our project with more consistent naming of the packages. We also worked on fixing the \verb DataFile  class that needed improvements. Then we started working on a new networking package defining the Sockets needed for messaging. It took us some time to realize we actually needed one socket per plane from a Tower's perspective. We started coding this but forgot multi-threading which made the whole program very unresponsive. That week has been very busy for us ("Voyage d'Žtudes") and other assignments. So we left it like until the next Tuesday.
 
 \section{Week Five}
-We made some great progress. The networking part finally got cleaner and we are now trying to put everything together. In the meanwhile we used a external library to make an OAuth on Twitter. We made a static class that can send tweets. Hence, the keys are set in a configuration file and can't be set differently at the time. We are going to work over the weekend to try to implement the multiple plane implementation and will send an update for the second journal release.
-
-
-
-
-
-
+We made some great progress. The networking part finally got cleaner and we are now trying to put everything together. In the meanwhile we used a external library to make an OAuth on Twitter. We made a static class that can send tweets. Hence, the keys are set in a configuration file and can't be set differently at the time. Over the weekend we made some great progress. The networking discovery now works and the handshake is correctly done. Our class \verb DataFile  now works with the given tests. We still want it to become more robust and we'll  be looking into implementing a better hash verification implementation because it is very tricky on how it behaves.
 \end{document}
 
 
