--- a/Development Journal/Development Journal/Journal.tex
+++ b/Development Journal/Development Journal/Journal.tex
@@ -27,9 +27,9 @@ numbersep=10pt,
 tabsize=4,
 showspaces=false,
 showstringspaces=false}
-\usepackage[applemac]{inputenc}
-\newtheorem{theorem}{Théorème}
-\newtheorem*{definition}{Définition}
+\usepackage[utf8]{inputenc}
+\newtheorem{theorem}{Th√©or√®me}
+\newtheorem*{definition}{D√©finition}
 \newtheorem*{exercice}{Exercice}
 \hyphenpenalty=10000
 
@@ -76,7 +76,7 @@ The reason why we want this to be an abstract class is really straightforward. W
 During this third week, we came back to the \emph{encryption} and we made two new classes. \verb RSAInputStream   (inheriting \verb InputStream  ) and \verb RSAOutputStream  (inheriting \verb OutputStream  )  to support inputs and outputs of encrypted data and messages. These classes were built pretty quickly and we focused more on the \verb DataFile  class which was way more difficult to code. To start with, we choose to use a \verb HashMap  for rebuilding files. Splitting files was easy but rebuilding them once splited took some extra time. We adapted the Unit Test to work correctly but we definitely need to come back to this file to improve it.
 
 \section{Week Four}
-This week we were given a two weeks assignment. We started in the morning refactoring our project with more consistent naming of the packages. We also worked on fixing the \verb DataFile  class that needed improvements. Then we started working on a new networking package defining the Sockets needed for messaging. It took us some time to realize we actually needed one socket per plane from a Tower's perspective. We started coding this but forgot multi-threading which made the whole program very unresponsive. That week has been very busy for us ("Voyage d'études") and other assignments. So we left it like until the next Tuesday.
+This week we were given a two weeks assignment. We started in the morning refactoring our project with more consistent naming of the packages. We also worked on fixing the \verb DataFile  class that needed improvements. Then we started working on a new networking package defining the Sockets needed for messaging. It took us some time to realize we actually needed one socket per plane from a Tower's perspective. We started coding this but forgot multi-threading which made the whole program very unresponsive. That week has been very busy for us ("Voyage d'√©tudes") and other assignments. So we left it like until the next Tuesday.
 
 \section{Week Five}
 We made some great progress. The networking part finally got cleaner and we are now trying to put everything together. In the meanwhile we used a external library to make an OAuth on Twitter. We made a static class that can send tweets. Hence, the keys are set in a configuration file and can't be set differently at the time. Over the weekend we made some great progress. The networking discovery now works and the handshake is correctly done. Our class \verb DataFile  now works with the given tests. We still want it to become more robust and we'll  be looking into implementing a better hash verification implementation because it is very tricky on how it behaves.
@@ -87,9 +87,16 @@ The midterm return is coming up, so we need to try our best to combine our packa
 On the other hand, we are done with Twitter Integration. Sending a Tweet is easy and can be done in a single line of code. We finalized the JournalGUI but definitely needs some improvements. 
 
 \section{Midterm Conclusion}
-When starting new ITPs we did really misunderstand the expected way of coding and wasted lots of time coding it the wrong way or fixing little mistakes. The biggest difficulty we faced so far was putting all the separate pieces together. Making the packages work together was tricky. An example of this is the \verb DataFile  . It works quite well when we run it with our own tests but it doesn’t work for the demo planes. The good news is that basic functions are working and according to the assistant the main architecture is satisfactory. Meanwhile we would love having some suggestions about architecture so we can make it more robust after the midterm. 
+When starting new ITPs we did really misunderstand the expected way of coding and wasted lots of time coding it the wrong way or fixing little mistakes. The biggest difficulty we faced so far was putting all the separate pieces together. Making the packages work together was tricky. An example of this is the \verb DataFile  . It works quite well when we run it with our own tests but it doesn‚Äôt work for the demo planes. The good news is that basic functions are working and according to the assistant the main architecture is satisfactory. Meanwhile we would love having some suggestions about architecture so we can make it more robust after the midterm. 
 
 \includegraphics[scale=0.45]{UML.pdf}
+\newpage
+
+\section{Week Seven}
+During this week we didn't make much progress. It was a very busy week for the both of us. We did however did some refactoring including the way we are handling the journal and logs. We did create an event class that is just a container for a single event and that allows us to log each message easier. Over the weekend we did make some progress on programming the planes and finalizing the the logging events.
+\section{Week Eight}
+We started working on the things that were still missing (Airport GUI and Routing Messages) to catch up with the ITP-06 and will be starting with ITP-07 as soon as possible. We are not up-to-date but we are not left behind either. We'll try to catch up over the weekend since this week is less busy than the preceding one.
+
 
 \end{document}
 
