--- a/Development Journal/Development Journal/Journal.tex
+++ b/Development Journal/Development Journal/Journal.tex
@@ -97,6 +97,12 @@ During this week we didn't make much progress. It was a very busy week for the b
 \section{Week Eight}
 We started working on the things that were still missing (Airport GUI and Routing Messages) to catch up with the ITP-06 and will be starting with ITP-07 as soon as possible. We are not up-to-date but we are not left behind either. We'll try to catch up over the weekend since this week is less busy than the preceding one.
 
+\section{Week Eight}
+During this week we've been focusing on the GUI improvements and fixing of bugs in the DataFile that caused files never to be transfered correctly or not in an optimized way. We also added the Choke/Unchoke function in the GUI that was missing. Some progress has been made on routing and the coding of the planes but both things still require some additionnal improvements.
+
+\section{Week Nine}
+
+We added the types of plane to our customized plane to have advanced compatibility with the given planes and programming guidelines. Routing has been partially implemented but remains tricky and there is progress to made. We also got our innovation approved. We'll be working on a JSON API to get data from the Airplane tower over HTTP. The following weeks will be very busy. We still have some features to implement (ITP-7) and we have a lot of work to do on our innovation. We'll try our best to get as much as possible working in a clean and clever way.
 
 \end{document}
 
