--- a/Development Journal/Development Journal/Journal.tex
+++ b/Development Journal/Development Journal/Journal.tex
@@ -73,7 +73,7 @@ The reason why we want this to be an abstract class is really straightforward. W
 
 
 \section{Week Three}
-During this third week, we came back to the \emph{encryption} and we made two new classes. \verb RSAInputStream   (inheriting \verb InputStream  ) and \verb RSAOutputStream  (inheriting \verb OutputStream  )  to support inputs and outputs of encrypted data and messages. These classes were built pretty quickly and we focused more on the \verb DataFile  class which was way more difficult to code. To start with, we choose to use a \verb HashMap  for rebuilding files. Splitting files was easy but rebuilding them once splited took some extra time. We adapted the Unit Test to work correctly but we definitely need to come back to this file to improve it.
+During this third week, we came back to the \emph{encryption} and we made two new classes. \verb RSAInputStream   (inheriting \verb InputStream  ) and \verb RSAOutputStream  (inheriting \verb OutputStream  )  to support inputs and outputs of encrypted data and messages. These classes were built pretty quickly and we focused more on the \verb DataFile  class which was way more difficult to code. To start with, we choose to use a \verb HashMap  for rebuilding files. Splitting files was easy but rebuilding them once splitted took some extra time. We adapted the Unit Test to work correctly but we definitely need to come back to this file to improve it.
 
 \section{Week Four}
 This week we were given a two weeks assignment. We started in the morning refactoring our project with more consistent naming of the packages. We also worked on fixing the \verb DataFile  class that needed improvements. Then we started working on a new networking package defining the Sockets needed for messaging. It took us some time to realize we actually needed one socket per plane from a Tower's perspective. We started coding this but forgot multi-threading which made the whole program very unresponsive. That week has been very busy for us ("Voyage d'études") and other assignments. So we left it like until the next Tuesday.
@@ -98,11 +98,13 @@ During this week we didn't make much progress. It was a very busy week for the b
 We started working on the things that were still missing (Airport GUI and Routing Messages) to catch up with the ITP-06 and will be starting with ITP-07 as soon as possible. We are not up-to-date but we are not left behind either. We'll try to catch up over the weekend since this week is less busy than the preceding one.
 
 \section{Week Eight}
-During this week we've been focusing on the GUI improvements and fixing of bugs in the DataFile that caused files never to be transfered correctly or not in an optimized way. We also added the Choke/Unchoke function in the GUI that was missing. Some progress has been made on routing and the coding of the planes but both things still require some additionnal improvements.
+During this week we've been focusing on the GUI improvements and fixing of bugs in the DataFile that caused files never to be transferred correctly or not in an optimized way. We also added the Choke/Unchoke function in the GUI that was missing. Some progress has been made on routing and the coding of the planes but both things still require some additional improvements.
 
 \section{Week Nine}
 
 We added the types of plane to our customized plane to have advanced compatibility with the given planes and programming guidelines. Routing has been partially implemented but remains tricky and there is progress to made. We also got our innovation approved. We'll be working on a JSON API to get data from the Airplane tower over HTTP. The following weeks will be very busy. We still have some features to implement (ITP-7) and we have a lot of work to do on our innovation. We'll try our best to get as much as possible working in a clean and clever way.
+
+For more information, please check out our complete documentation and final release document.
 
 \end{document}
 
