--- a/Docs/Final Document/SecureAirportTower-FinalRelease.tex
+++ b/Docs/Final Document/SecureAirportTower-FinalRelease.tex
@@ -104,8 +104,10 @@ Please note that we have a sub-package in which we define each different type of
 
 \subsection{Plane}
 Plane is the package that contains all the classes related to our own plane. 
-\verb TestPlane.java  is the main class. It handles the initialization of different kind of planes and initialization with encryption key. \verb
-NEEDS COMPLETION
+\verb TestPlane.java  is the main class. It supports random name generation for planes, initialization with launch settings and generates the key used for encryption.
+Here are some other underlying classes.
+\begin{enumerate}
+\end{enumerate}
 
 \subsection{Tests}
 
